css fix overflow issues

--- a/public/css/css.css
+++ b/public/css/css.css
@@ -137,6 +137,10 @@ ol {
     font-size: 1vw;
 }
 
+.panel-body {
+    overflow: scroll;
+}
+
 
 /***/
 
